# jin-claude

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: AGENTS.md  architect-low.md  architect-medium.md  build-fixer-low.md  code-reviewer-low.md  designer-low.md  executor-low.md  jin-interview-agent.md  mole-graph-generator-agent.md  mole-intel-organizer-agent.md  mole-interview-agent.md  mole-report-presenter-agent.md  mole-research-agent.md  mole-review-agent.md  mole-user-identifier-agent.md  planner.md  researcher-low.md  scientist-high.md  scientist-low.md  security-reviewer-low.md  tdd-guide-low.md  zy-interview-agent.md
.claude/script/: statusline-command.sh  statusline-config.txt  tmux-usage.sh
.claude/skills/jin-claude-init/: SKILL.md  jin-claude-init 업데이트 계획.md
.claude/skills/jin-claude-init/scripts/: merge_settings.py  sync_repo.py  test_merge_settings.py  test_sync_repo.py
.claude/skills/jin-commit/: SKILL.md
.claude/skills/jin-interview/: SKILL.md
.claude/skills/mole-claude-init/: SKILL.md
.claude/skills/py-standard/: SKILL.md
.claude/skills/zy-commit/: SKILL.md
.claude/skills/zy-interview/: SKILL.md
scripts/: install-timer.sh
src/jin_claude/: __init__.py  fetch_claude_usage.py
src/zyclaude/: __init__.py  fetch_claude_usage.py
systemd/: fetch-claude-usage.service  fetch-claude-usage.timer
tests/: test_fetch_claude_usage.py  test_jin_interview.py  test_pacing.py  test_statusline.sh  test_statusline_no_usage.sh  test_zy_interview.py
(+1 files in other folders)
