[project]
name = "jin-claude"
version = "0.1.0"
description = "Claude Code statusline utilities"
readme = "README.md"
authors = [
    { name = "jin", email = "jin@stealthmole.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7",
]

[project.scripts]
fetch-claude-usage = "jin_claude.fetch_claude_usage:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
